--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 
+add_subdirectory(selalib_CXX)
+
 add_executable(voicexx
+	advection1d.cpp
 	distributed2dfield.cpp
 	simpleheat.cpp
 )
@@ -10,4 +13,5 @@ target_include_directories(voicexx PRIVATE
 target_link_libraries(voicexx PRIVATE
 		MPI::MPI_CXX
 		std::mdspan
+		cxx_splines
 )
