--- a/src/selalib_CXX/boundary_conditions/CMakeLists.txt
+++ b/src/selalib_CXX/boundary_conditions/CMakeLists.txt
@@ -1,13 +1,6 @@
-SET( BC_SRC
-  sll_m_boundary_condition_descriptors.F90
-  )
-
-add_library( boundary_conditions OBJECT ${BC_SRC} )
-
-set_property(TARGET boundary_conditions PROPERTY Fortran_MODULE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/boundary_conditions_FMOD")
+add_library( boundary_conditions STATIC null_boundary_value.cpp)
 
 target_include_directories( boundary_conditions
-    PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}"
-    INTERFACE "${CMAKE_CURRENT_BINARY_DIR}/boundary_conditions_FMOD"
+    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 add_library( selalib::boundary_conditions ALIAS boundary_conditions )
