--- a/src/selalib_CXX/matrix/CMakeLists.txt
+++ b/src/selalib_CXX/matrix/CMakeLists.txt
@@ -1,4 +1,4 @@
-SET( MATRIX_CXX_FILES
+add_library( cxx_spline_matrix STATIC
   matrix.cpp
   matrix_dense.cpp
   matrix_banded.cpp
@@ -7,18 +7,15 @@ SET( MATRIX_CXX_FILES
   matrix_periodic_banded.cpp
   matrix_pds_tridiag.cpp
   )
-
-add_library( cxx_spline_matrix OBJECT ${MATRIX_CXX_FILES} )
 target_include_directories(cxx_spline_matrix
     PUBLIC
         "${CMAKE_CURRENT_SOURCE_DIR}"
-    PRIVATE
-        "${CMAKE_CURRENT_SOURCE_DIR}/../math_tools"
 )
 
 target_link_libraries( cxx_spline_matrix
   PUBLIC
     std::mdspan
+    selalib::math_tools
   PRIVATE
     ${LAPACK_LIBRARIES}
 )
