--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/mdspan"]
 	path = vendor/mdspan
-	url = https://github.com/kokkos/mdspan.git
+	url = https://github.com/mattja/mdspan.git
