--- a/src/efield/CMakeLists.txt
+++ b/src/efield/CMakeLists.txt
@@ -2,6 +2,11 @@ add_library(efield STATIC
 	efieldsolver.cpp
 )
 
+target_compile_features(efield
+	PUBLIC
+		cxx_std_17
+)
+
 target_include_directories(efield
 	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
 )
