--- a/src/matrix/CMakeLists.txt
+++ b/src/matrix/CMakeLists.txt
@@ -1,23 +1,29 @@
-add_library(cxx_spline_matrix STATIC
-  matrix.cpp
-  matrix_dense.cpp
-  matrix_banded.cpp
-  matrix_corner_block.cpp
-  matrix_center_block.cpp
-  matrix_periodic_banded.cpp
-  matrix_pds_tridiag.cpp
- )
-target_include_directories(cxx_spline_matrix
-    PUBLIC
-        "${CMAKE_CURRENT_SOURCE_DIR}"
+add_library(matrix STATIC
+	matrix.cpp
+	matrix_dense.cpp
+	matrix_banded.cpp
+	matrix_corner_block.cpp
+	matrix_center_block.cpp
+	matrix_periodic_banded.cpp
+	matrix_pds_tridiag.cpp
 )
 
-target_link_libraries(cxx_spline_matrix
-  PUBLIC
-    std::mdspan
-    sll::math_tools
-  PRIVATE
-    ${LAPACK_LIBRARIES}
+target_compile_features(matrix
+	PUBLIC
+		cxx_std_17
 )
 
-add_library(sll::cxx_spline_matrix ALIAS cxx_spline_matrix)
+target_include_directories(matrix
+	PUBLIC
+		"${CMAKE_CURRENT_SOURCE_DIR}"
+)
+
+target_link_libraries(matrix
+	PUBLIC
+		std::mdspan
+		sll::math_tools
+	PRIVATE
+		${LAPACK_LIBRARIES}
+)
+
+add_library(sll::matrix ALIAS matrix)
