--- a/src/vlasov/CMakeLists.txt
+++ b/src/vlasov/CMakeLists.txt
@@ -3,6 +3,11 @@ add_library(vlasov STATIC
 	vlasovsolver.cpp
 )
 
+target_compile_features(vlasov
+	PUBLIC
+		cxx_std_17
+)
+
 target_include_directories(vlasov
     PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
 )
