--- a/src/mesh/CMakeLists.txt
+++ b/src/mesh/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_library(mesh INTERFACE)
 
+target_compile_features(mesh
+	INTERFACE
+		cxx_std_17
+)
+
 target_include_directories(mesh
 	INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}"
 )
