--- a/src/splines/CMakeLists.txt
+++ b/src/splines/CMakeLists.txt
@@ -7,6 +7,12 @@ add_library(splines STATIC
 	spline_2d.cpp
 	spline_interpolator_2d.cpp
 )
+
+target_compile_features(splines
+	PUBLIC
+		cxx_std_17
+)
+
 target_include_directories(splines
 	PUBLIC
 		"${CMAKE_CURRENT_SOURCE_DIR}"
@@ -16,7 +22,7 @@ target_link_libraries(splines
 	PUBLIC
 		std::mdspan
 		sll::math_tools
-		sll::cxx_spline_matrix
+		sll::matrix
 		sll::boundary_conditions
 )
 
