--- a/src/time/CMakeLists.txt
+++ b/src/time/CMakeLists.txt
@@ -2,6 +2,11 @@ add_library(time STATIC
 	predcorr.cpp
 )
 
+target_compile_features(time
+	PUBLIC
+		cxx_std_17
+)
+
 target_include_directories(time
 	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
 )
