--- a/src/array_tools/CMakeLists.txt
+++ b/src/array_tools/CMakeLists.txt
@@ -7,6 +7,7 @@ target_include_directories(array_tools
 target_link_libraries(array_tools
 	INTERFACE
 		std::mdspan
+		std::mdarray
 )
 
 add_library(vcx::array_tools ALIAS array_tools)
