--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,11 @@
 [submodule "vendor/mdspan"]
 	path = vendor/mdspan
-	url = https://github.com/mattja/mdspan.git
+	url = git@github.com:kokkos/mdspan.git
+[submodule "vendor/googletest"]
+	path = vendor/googletest
+	url = git@github.com:google/googletest.git
+	branch = master
+[submodule "vendor/mdarray"]
+	path = vendor/mdarray
+	usrl = git@github.com:jbigot/mdarray.git
+	branch = master
