--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,29 +8,29 @@ add_subdirectory(math_tools)
 add_subdirectory(matrix)
 add_subdirectory(mesh)
 add_subdirectory(splines)
-add_subdirectory(time)
-add_subdirectory(vlasov)
+#add_subdirectory(time)
+#add_subdirectory(vlasov)
 
-add_executable(voicexx
-	voicexx.cpp
-)
+#add_executable(voicexx
+	#voicexx.cpp
+#)
 
-target_compile_features(voicexx
-	PUBLIC
-		cxx_std_17
-)
+#target_compile_features(voicexx
+	#PUBLIC
+		#cxx_std_17
+#)
 
-target_include_directories(voicexx
-	PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
-)
+#target_include_directories(voicexx
+	#PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}"
+#)
 
-target_link_libraries(voicexx
-	PUBLIC
-		vcx::array_tools
-		sll::boundary_conditions
-		vcx::efield
-		vcx::mesh
-		sll::splines
-		vcx::time
-		vcx::vlasov
-)
+#target_link_libraries(voicexx
+	#PUBLIC
+		#vcx::array_tools
+		#sll::boundary_conditions
+		#vcx::efield
+		#vcx::mesh
+		#sll::splines
+		#vcx::time
+		#vcx::vlasov
+#)
