--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,17 +26,17 @@ target_link_libraries(voice_dim
 		vcx::vlasov
 )
 
-#add_executable(voicexx
-	#voicexx.cpp
-#)
-#target_compile_features(voicexx PUBLIC cxx_std_17)
-#target_link_libraries(voicexx
-	#PUBLIC
-		#vcx::array_tools
-		#sll::boundary_conditions
-		#vcx::efield
-		#vcx::mesh
-		#sll::splines
-		#vcx::time
-		#vcx::vlasov
-#)
+add_executable(voicexx
+	voicexx.cpp
+)
+target_compile_features(voicexx PUBLIC cxx_std_17)
+target_link_libraries(voicexx
+	PUBLIC
+		vcx::array_tools
+		sll::boundary_conditions
+		vcx::efield
+		vcx::mesh
+		sll::splines
+		vcx::time
+		vcx::vlasov
+)
