--- a/.gitmodules
+++ b/.gitmodules
@@ -1,11 +1,11 @@
 [submodule "vendor/mdspan"]
 	path = vendor/mdspan
-	url = git@github.com:kokkos/mdspan.git
+	url = https://github.com/kokkos/mdspan.git
 [submodule "vendor/googletest"]
 	path = vendor/googletest
-	url = git@github.com:google/googletest.git
+	url = https://github.com/google/googletest.git
 	branch = master
 [submodule "vendor/mdarray"]
 	path = vendor/mdarray
-	url = git@github.com:jbigot/mdarray.git
+	url = https://github.com/jbigot/mdarray.git
 	branch = master
