Test indent last

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,9 +6,10 @@ all_tests:
   variables:
     GIT_SUBMODULE_STRATEGY: recursive
   script: |
-    find src '(' -name '*.h' -o -name '*.cpp' ')' -exec clang-format -n -Werror '{}' '+'
     mkdir build
     cd build
     cmake ..
     make -j 2 VERBOSE=1
     ctest --output-on-failure --timeout 5
+    cd ..
+    find src '(' -name '*.h' -o -name '*.cpp' ')' -exec clang-format -n -Werror '{}' '+' && echo "Identation is Ok!"
