Use more standard path for FFTW cmake stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.15)
 project(voicexx CXX)
 
+# Our include path
+
+list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_SOURCE_DIR}/cmake")
+
 
 # Configuration
 
@@ -17,10 +21,7 @@ include(CTest)
 find_package(LAPACK REQUIRED COMPONENTS CXX)
 
 ## Lokk for FFTW
-SET (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/findFFTW ${CMAKE_MODULE_PATH} )
 find_package(FFTW REQUIRED COMPONENTS DOUBLE_LIB)
-SET(CMAKE_CXX_FLAGS "-lm -lfftw3")
-SET(CMAKE_C_FLAGS   "-lm -lfftw3")
 
 ## Look for googletest in `vendor/`, we use it to write unit tests
 option(INSTALL_GTEST "Enable installation of googletest." OFF)
