Add fftw3 to docker image

--- a/voicexx_env/Dockerfile
+++ b/voicexx_env/Dockerfile
@@ -15,6 +15,7 @@ RUN chmod +x /bin/bash_run \
     clang-format \
     cmake \
     git \
+    libfftw3-dev \
     liblapack-dev \
  && apt-get autoremove -y \
  && apt-get clean -y \
