Add new test for FFT computation.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(unit_tests
 	taggedarray.cpp
 	splines.cpp
 	view.cpp
-    fft.cpp
+        fft.cpp
 )
 target_compile_features(unit_tests PUBLIC cxx_std_17)
 target_link_libraries(unit_tests
@@ -19,5 +19,6 @@ target_link_libraries(unit_tests
 		vcx::array_tools
 		vcx::mesh
 		FFTW::Double
+                vcx::fft
 )
 gtest_discover_tests(unit_tests)
