--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,29 +1,22 @@
 cmake_minimum_required(VERSION 3.15)
 
-add_subdirectory(array_tools)
-add_subdirectory(boundary_conditions)
 add_subdirectory(efield)
 add_subdirectory(fft)
-add_subdirectory(geometry)
-add_subdirectory(math_tools)
-add_subdirectory(matrix)
-add_subdirectory(mesh)
 add_subdirectory(splines)
 add_subdirectory(time)
 add_subdirectory(vlasov)
 
-add_executable(voice_dim
+add_executable(voicexx
 	voicexx.cpp
 )
-target_compile_features(voice_dim PUBLIC cxx_std_17)
-target_link_libraries(voice_dim
+target_compile_features(voicexx PUBLIC cxx_std_17)
+target_link_libraries(voicexx
 	PUBLIC
-		vcx::array_tools
-		sll::boundary_conditions
-		vcx::efield
-                vcx::fft
-		vcx::mesh
+		ddc::ddc
+		vcx::fft
 		sll::splines
+		vcx::efield
 		vcx::time
 		vcx::vlasov
-                FFTW::Double)
+		FFTW::Double
+)
