--- a/src/splines/CMakeLists.txt
+++ b/src/splines/CMakeLists.txt
@@ -1,10 +1,5 @@
 add_library(splines STATIC
-	bsplines.cpp
-	bsplines_uniform.cpp
-	bsplines_non_uniform.cpp
-	spline_1d.cpp
 	spline_interpolator_1d.cpp
-	spline_2d.cpp
 	spline_interpolator_2d.cpp
 )
 
@@ -20,10 +15,8 @@ target_include_directories(splines
 
 target_link_libraries(splines
 	PUBLIC
-		std::mdspan
-		sll::math_tools
+		ddc::ddc
 		sll::matrix
-		sll::boundary_conditions
 )
 
 add_library(sll::splines ALIAS splines)
