Add a test on the order of inner solvers in the split Vlasov solver

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ include(GoogleTest)
 add_executable(unit_tests
 	splines.cpp
 	fft.cpp
+        splitvlasovsolver.cpp
 )
 target_compile_features(unit_tests PUBLIC cxx_std_17)
 target_link_libraries(unit_tests
@@ -13,5 +14,8 @@ target_link_libraries(unit_tests
 		sll::splines
 		FFTW::Double
                 vcx::fft
+                vcx::vlasov
+                GTest::gmock
+                GTest::gmock_main
 )
 gtest_discover_tests(unit_tests)
