Moved voice++ specific aliases to geometry.h

--- a/src/efield/CMakeLists.txt
+++ b/src/efield/CMakeLists.txt
@@ -14,6 +14,7 @@ target_include_directories(efield
 target_link_libraries(efield
 	PUBLIC
 		ddc::ddc
+		vcx::geometry
 )
 
 add_library(vcx::efield ALIAS efield)
