--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.15)
 
 add_subdirectory(efield)
 add_subdirectory(fft)
+add_subdirectory(geometry)
 add_subdirectory(splines)
 add_subdirectory(time)
 add_subdirectory(vlasov)
