--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(vlasov)
 
 add_executable(voicexx
 	voicexx.cpp
+	expose_to_pdi.cpp
 )
 target_compile_features(voicexx PUBLIC cxx_std_17)
 target_link_libraries(voicexx
@@ -20,4 +21,5 @@ target_link_libraries(voicexx
 		vcx::time
 		vcx::vlasov
 		FFTW::Double
+		PDI::pdi
 )
