--- a/voicexx_env/Dockerfile
+++ b/voicexx_env/Dockerfile
@@ -4,19 +4,33 @@ COPY bash_run /bin/
 ENV BASH_ENV=/etc/profile
 SHELL ["/bin/bash", "-c"]
 
+
 RUN chmod +x /bin/bash_run \
  && apt-get update -y \
  && apt-get upgrade -y \
  && echo -e '13\n33\n' \
   | apt-get install -qy --no-install-recommends \
+    ca-certificates \
     tzdata \
+    wget \
+ && echo "deb [ arch=amd64 ] https://raw.githubusercontent.com/pdidev/repo/pdi-master.ubuntu focal main" > /etc/apt/sources.list.d/pdi.list \
+ && wget -O /etc/apt/trusted.gpg.d/pdidev-archive-keyring.gpg https://raw.githubusercontent.com/pdidev/repo/pdi-master.ubuntu/pdidev-archive-keyring.gpg \
+ && chmod a+r /etc/apt/trusted.gpg.d/pdidev-archive-keyring.gpg \
+ && apt-get update -y \
  && apt-get install -y --no-install-recommends \
     build-essential \
     clang-format \
     cmake \
+    pkg-config \
+    cmake-data \
     git \
     libfftw3-dev \
     liblapack-dev \
+    pdidev-archive-keyring \
+    libpdi-dev \
+ && apt-get purge -y \
+    ca-certificates \
+    wget \
  && apt-get autoremove -y \
  && apt-get clean -y \
  && apt-get autoclean -y \
