Up to date with 14-remove-usage-of-deprecated-splines

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.15)
 
+add_subdirectory(deprecated)
 add_subdirectory(efield)
 add_subdirectory(fft)
 add_subdirectory(geometry)
-add_subdirectory(splines)
 add_subdirectory(time)
 add_subdirectory(vlasov)
 
@@ -16,7 +16,6 @@ target_link_libraries(voicexx
 	PUBLIC
 		ddc::ddc
 		vcx::fft
-		sll::splines
 		vcx::efield
 		vcx::time
 		vcx::vlasov
