--- a/src/fft/CMakeLists.txt
+++ b/src/fft/CMakeLists.txt
@@ -1,19 +1,18 @@
-add_library(fft STATIC
-        fft_1d.cpp
+add_library(fft INTERFACE
 )
 
 target_compile_features(fft
-	PUBLIC
+	INTERFACE
 		cxx_std_17
 )
 
 target_include_directories(fft
-	PUBLIC
+	INTERFACE
 		"${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
 target_link_libraries(fft
-	PUBLIC
+	INTERFACE
 		ddc::ddc
                 vcx::geometry
 )
