Support PDI directly from DDC

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,12 +9,12 @@ add_subdirectory(vlasov)
 
 add_executable(voicexx
 	voicexx.cpp
-	expose_to_pdi.cpp
 )
 target_compile_features(voicexx PUBLIC cxx_std_17)
 target_link_libraries(voicexx
 	PUBLIC
 		ddc::ddc
+		ddc::PDI
 		vcx::fft
 		vcx::efield
 		vcx::time
