--- a/src/vlasov/CMakeLists.txt
+++ b/src/vlasov/CMakeLists.txt
@@ -15,7 +15,7 @@ target_include_directories(vlasov
 
 target_link_libraries(vlasov
 	PUBLIC
-		ddc::ddc
+		DDC::DDC
 		sll::splines
 		vcx::geometry
 )
