--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/mdspan"]
 	path = vendor/mdspan
-	url = https://github.com/tpadioleau/mdspan.git
+	url = https://github.com/jbigot/mdspan.git
 [submodule "vendor/googletest"]
 	path = vendor/googletest
 	url = https://github.com/google/googletest.git
