--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(efield)
 add_subdirectory(fft)
 add_subdirectory(geometry)
 add_subdirectory(time)
-add_subdirectory(fdistribu)
+add_subdirectory(speciesinfo)
 add_subdirectory(vlasov)
 
 add_executable(voicexx
@@ -18,7 +18,7 @@ target_link_libraries(voicexx
 		vcx::fft
 		vcx::efield
 		vcx::time
-		vcx::fdistribu
+		vcx::speciesinfo
 		vcx::vlasov
 		FFTW::Double
 		PDI::pdi
