--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-all_tests:
+cmake_tests:
   only: [ main, merge_requests ]
   stage: test
   needs: []
@@ -11,10 +11,17 @@ all_tests:
     cd build
     cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON ..
     make -j 2 VERBOSE=1
-    ctest --output-junit tests.xml --output-on-failure --timeout 5
-    cd ..
-    find src tests vendor/ddc vendor/sll '(' -name '*.h' -o -name '*.cpp' ')' -exec clang-format -n -Werror '{}' '+' && echo "Identation is Ok!"
+    ctest --output-on-failure --timeout 5 --output-junit tests.xml
   artifacts:
     when: always
     reports:
       junit: ./build/tests.xml
+indentation:
+  only: [ main, merge_requests ]
+  stage: test
+  needs: []
+  image: jbigot/voicexx_env
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
+  script: |
+    find src tests vendor/ddc vendor/sll '(' -name '*.h' -o -name '*.hpp' -o -name '*.cpp' ')' -exec clang-format -n -Werror '{}' '+' && echo "Identation is Ok!"
