--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,11 +10,31 @@ cmake_tests:
     mkdir build
     cd build
     cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON ..
-    make -j 2 VERBOSE=1
-    ctest --output-on-failure --timeout 5 --output-junit tests.xml
-    ls *
+    make -j 4 VERBOSE=1
+    ctest -j 2 --output-on-failure --timeout 5  -LE test_on_Release_only --output-junit tests.xml
   artifacts:
     when: always
+    reports:
+      junit: ./build/tests.xml
+cmake_tests_Release:
+  only: [ main, merge_requests ]
+  stage: test
+  needs: []
+  image: jbigot/voicexx_env
+  variables:
+    GIT_SUBMODULE_STRATEGY: recursive
+  script: |
+    rm -rf build || true
+    mkdir build
+    cd build
+    cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release ..
+    make -j 4 VERBOSE=1
+    ctest -j 2 --output-on-failure --timeout 5 --output-junit tests.xml
+  artifacts:
+    when: always
+    paths:
+      - ./build/tests/landau/dampingrate_t0.0to45.0.png
+      - ./build/tests/landau/frequency_t0.0to45.0.png
     reports:
       junit: ./build/tests.xml
 indentation:
