--- a/spack.yaml
+++ b/spack.yaml
@@ -11,3 +11,8 @@ spack:
   - 'pdiplugin-decl-hdf5'
   - 'pdiplugin-set-value'
   - 'pdiplugin-trace'
+  - 'py-h5py'
+  - 'py-matplotlib'
+  - 'py-numpy'
+  - 'py-scipy'
+  - 'py-sympy'
