--- a/simulations/landau/CMakeLists.txt
+++ b/simulations/landau/CMakeLists.txt
@@ -17,3 +17,22 @@ target_link_libraries(landau_fft
         PDI::pdi
         sll::splines
 )
+
+add_executable(landau_fem_periodic
+    landau_fem_periodic.cpp
+)
+target_compile_features(landau_fem_periodic PUBLIC cxx_std_17)
+target_link_libraries(landau_fem_periodic
+    PUBLIC
+        DDC::DDC
+        DDC::PDI
+        vcx::initialization
+        vcx::interpolation
+        vcx::poisson
+        vcx::time
+        vcx::speciesinfo
+        vcx::vlasov
+        FFTW::Double
+        PDI::pdi
+        sll::splines
+)
