--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(speciesinfo)
 add_subdirectory(vlasov)
 add_subdirectory(interpolation)
 add_subdirectory(initialization)
+add_subdirectory(paraconfpp)
